--- a/.gitattributes
+++ b/.gitattributes
@@ -3,7 +3,7 @@
 ###############################################################################
 * text=auto
 
-*.rb linguist-language=C#
+*.js linguist-language=C#
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
